Animations done, still need fixes (white text overlaping with white background)

--- a/scss/_extensions.scss
+++ b/scss/_extensions.scss
@@ -1,6 +1,6 @@
 %arrows{
     top: 50%;
-    margin-top: -80px;
+    margin-top: -40px;
     display: flex;
     align-items: center;
     font-size: 3rem;
